Validate/require_labels/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    foo: bar
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
